--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
         <div id="content">
           <div id="home" class="content-region hide">
             <h2>Home</h2>
-            <p>Hi, I'm Jacob Yuryev, a technologist and creative based in San Mateo, CA.</p>
+            <p>Hi. I'm a student at Stanford studying Computer Science and Economics. I operate based on one central tenet: I am not the best but I will always strive to be. I love asymmetric upside, predicting the future, acting on those predictions, and pièn. </p>
           </div>
 
           <div id="about" class="content-region hide">
             <h2>About</h2>
-            <p>This minimalist website was built without writing code from scratch by customising a simple template. I enjoy exploring technology, design and sharing my work.</p>
+            <p>I am interested in tech, startups, information, and efficient allocation of scare resources. Previous experience within finance, startups, media, and public service. </p>
           </div>
 
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
-            <p>Feel free to reach out to me via email.</p>
+            <p>I want to learn from you. Reach out at jyuryev@stanford.edu to chat, for resume/cv, or anything else. </p>
           </div>
         </div>
       </div>
     </div>
 
     <footer>
-      &copy; <span id="year"></span> Jacob Yuryev
+      
     </footer>
 
     <!-- Our custom script -->
