--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
           <div id="about" class="content-region hide">
             <h2>About</h2>
-            <p>I am interested in tech, startups, information, and efficient allocation of scare resources. Previous experience within finance, startups, media, and public service. </p>
+            <p>I am interested in tech, startups, information, and efficient allocation of scare resources. Previous experience includes finance, startups, media, and public service. </p>
           </div>
 
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
-            <p>I want to learn from you. Reach out at jyuryev@stanford.edu to chat, for resume/cv, or anything else. </p>
+            <p>I want to learn from you. Reach out at jyuryev [at] stanford [dot] edu to chat, for resume/cv, or anything else. </p>
           </div>
         </div>
       </div>
